small layout changes by quiz and result

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -29,14 +29,14 @@
                 android:id="@+id/category_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="70dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="300dp"
                 android:fontFamily="@font/inter"
                 android:text="Categoria:"
-                app:layout_constraintBottom_toTopOf="@+id/right_ans_label"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.666"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,11 +44,12 @@
                 android:id="@+id/right_ans_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="237dp"
                 android:fontFamily="@font/inter"
                 android:text="Raspunsuri corecte:"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/category_label" />
@@ -57,11 +58,12 @@
                 android:id="@+id/wrong_ans_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="241dp"
                 android:fontFamily="@font/inter"
                 android:text="Raspunsuri gresite:"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/right_ans_label" />
@@ -82,11 +84,12 @@
                 android:id="@+id/percentage_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="247dp"
                 android:fontFamily="@font/inter"
                 android:text="Procentaj corecte:"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/wrong_ans_label" />
@@ -95,12 +98,11 @@
                 android:id="@+id/date_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="329dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
                 android:text="Data:"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/percentage_label" />
 
@@ -108,12 +110,11 @@
                 android:id="@+id/result_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="310dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
-                android:text="Rezultat"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:text="Rezultat:"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/date_label" />
 
@@ -121,10 +122,12 @@
                 android:id="@+id/category_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="32dp"
                 android:fontFamily="@font/inter"
                 android:text="category_placeholder"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/category_label"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -133,9 +136,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
                 android:text="corecte_placeholder"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/right_ans_label"
                 app:layout_constraintTop_toBottomOf="@+id/category_value" />
 
@@ -144,9 +149,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
                 android:text="gresite_placeholder"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/wrong_ans_label"
                 app:layout_constraintTop_toBottomOf="@+id/right_ans_value" />
 
@@ -154,21 +161,25 @@
                 android:id="@+id/percentage_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
                 android:text="procentaj_placeholder"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/percentage_label"
-                app:layout_constraintTop_toBottomOf="@+id/wrong_ans_value" />
+                app:layout_constraintTop_toBottomOf="@+id/wrong_ans_label" />
 
             <TextView
                 android:id="@+id/result_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/inter"
                 android:text="rezultat_placeholder"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/result_label"
                 app:layout_constraintTop_toBottomOf="@+id/date_value" />
 
@@ -176,17 +187,19 @@
                 android:id="@+id/date_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="40dp"
                 android:text="01.01.1970"
+                android:textColor="#F18C42"
+                android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/date_label"
-                app:layout_constraintTop_toBottomOf="@+id/percentage_value" />
+                app:layout_constraintTop_toBottomOf="@+id/percentage_label" />
 
             <Button
                 android:id="@+id/show_my_ans"
                 android:layout_width="301dp"
                 android:layout_height="66dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="16dp"
                 android:backgroundTint="#F18C42"
                 android:fontFamily="@font/inter"
