--- a/app/src/main/res/layout/activity_review_quiz.xml
+++ b/app/src/main/res/layout/activity_review_quiz.xml
@@ -39,9 +39,9 @@
         android:id="@+id/review_answer1"
         android:layout_width="306dp"
         android:layout_height="53dp"
-        android:layout_marginStart="53dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="69dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="16dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/review_answer2"
@@ -53,9 +53,9 @@
         android:id="@+id/review_answer2"
         android:layout_width="306dp"
         android:layout_height="53dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="16dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/review_answer3"
@@ -67,9 +67,9 @@
         android:id="@+id/review_answer3"
         android:layout_width="306dp"
         android:layout_height="53dp"
-        android:layout_marginStart="53dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="52dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="16dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/review_answer4"
@@ -81,13 +81,65 @@
         android:id="@+id/review_answer4"
         android:layout_width="306dp"
         android:layout_height="53dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="53dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="117dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/review_next_question"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/review_answer3" />
+
+    <ImageView
+        android:id="@+id/imageViewAnswer1"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/review_answer2"
+        app:layout_constraintEnd_toStartOf="@+id/review_answer1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/review_question_label" />
+
+    <ImageView
+        android:id="@+id/imageViewAnswer2"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/review_answer3"
+        app:layout_constraintEnd_toStartOf="@+id/review_answer2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/review_answer1" />
+
+    <ImageView
+        android:id="@+id/imageViewAnswer3"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/review_answer4"
+        app:layout_constraintEnd_toStartOf="@+id/review_answer3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/review_answer2" />
+
+    <ImageView
+        android:id="@+id/imageViewAnswer4"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="117dp"
+        app:layout_constraintBottom_toTopOf="@+id/review_next_question"
+        app:layout_constraintEnd_toStartOf="@+id/review_answer4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/review_answer3" />
 
